[package]
name = "jakmall_runtime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1.0.72"
async-channel = "1.9.0"
clap = { version = "4.3.17", features = ["derive"] }
futures-util = "0.3.28"
jakmall_client = { git = "https://github.com/reogman/jakmall_client.git", version = "0.1.0" }
log = "0.4.19"
nanoid = "0.4.0"
serde = { version = "1.0.173", features = ["derive"] }
serde_json = "1.0.103"
tokio = { version = "1.29.1", features = ["full"] }
tokio-stream = "0.1.14"
warp = "0.3.5"
zilog = { git = "https://github.com/zahrulsch/zilog.git", version = "0.1.0" }

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
